@@ -142,8 +142,12 @@ LRESULT WINAPI WinProc(HWND hWnd, UINT msg, WPARAM wParam, LPARAM lParam)
 		case SPECIAL_KEY_PREVIOUS:
 		case SPECIAL_KEY_STOP:
 		case SPECIAL_KEY_PLAY:
-// 		case SPECIAL_KEY_SEEK_FORWARD:
-// 		case SPECIAL_KEY_SEEK_BACKWARD:
+ 		case SPECIAL_KEY_SEEK_FORWARD:
+ 		case SPECIAL_KEY_SEEK_BACKWARD:
+			// if the global KeyHook is not enabled, we need to handle it here
+			// otherwise it will be handled by WM_KEYHOOK message
+			if (!IsKHEnabled()) 
+				g_pGame->KeyDown((int) wParam);
 			break;
 		default:
 			g_pGame->KeyDown((int) wParam);
@@ -159,6 +163,7 @@ LRESULT WINAPI WinProc(HWND hWnd, UINT msg, WPARAM wParam, LPARAM lParam)
 		}
 		break;
 	case WM_KEYHOOK:
+		/*
 		switch(GET_APPCOMMAND_LPARAM(lParam))
 		{
 		case APPCOMMAND_MEDIA_NEXTTRACK:
@@ -179,6 +184,18 @@ LRESULT WINAPI WinProc(HWND hWnd, UINT msg, WPARAM wParam, LPARAM lParam)
 		case APPCOMMAND_MEDIA_REWIND:
 			g_pGame->KeyDown(SPECIAL_KEY_SEEK_BACKWARD);
 			return 1;
+		}
+		*/
+		switch (wParam)
+		{
+		case SPECIAL_KEY_NEXT:
+		case SPECIAL_KEY_PREVIOUS:
+		case SPECIAL_KEY_STOP:
+		case SPECIAL_KEY_PLAY:
+		case SPECIAL_KEY_SEEK_FORWARD:
+		case SPECIAL_KEY_SEEK_BACKWARD:
+			g_pGame->KeyDown((int) wParam);
+			break;
 		}
 		break;
 	// Cancel AutoRun
